--- a/src/main/resources/assets/ae2/lang/zh_cn.json
+++ b/src/main/resources/assets/ae2/lang/zh_cn.json
@@ -511,6 +511,8 @@
   "gui.ae2.ToCraft": "合成数量：%s",
   "gui.ae2.ToastCraftingJobFinishedText": "%d %s",
   "gui.ae2.ToastCraftingJobFinishedTitle": "自动合成完毕！",
+  "gui.ae2.TransformTypeExplode": "爆炸",
+  "gui.ae2.TransformTypeThrowInFluid": "扔进 %s",
   "gui.ae2.TransparentFacades": "透明伪装板",
   "gui.ae2.TransparentFacadesHint": "控制网络工具在工具栏时伪装板的可见性",
   "gui.ae2.Types": "类型",
