--- a/src/main/resources/assets/ae2/lang/es_es.json
+++ b/src/main/resources/assets/ae2/lang/es_es.json
@@ -511,6 +511,8 @@
   "gui.ae2.ToCraft": "Para Crear: %s",
   "gui.ae2.ToastCraftingJobFinishedText": "%d %s",
   "gui.ae2.ToastCraftingJobFinishedTitle": "Fabricación Automática Completada",
+  "gui.ae2.TransformTypeExplode": "Explotar",
+  "gui.ae2.TransformTypeThrowInFluid": "Lanzar %s",
   "gui.ae2.TransparentFacades": "Fachadas Transparentes",
   "gui.ae2.TransparentFacadesHint": "Controla la visibilidad de las fachadas mientras este la herramienta de red en la barra de controles.",
   "gui.ae2.Types": "Tipos",
